refactor(SonarLint): follow the suggestions of sonarlint