@@ -1,8 +1,7 @@
 package com.drewdomi.redcross.infra.errors;
 
-import java.util.HashMap;
-import java.util.Map;
-
+import com.fasterxml.jackson.databind.exc.InvalidFormatException;
+import jakarta.validation.UnexpectedTypeException;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -11,24 +10,24 @@ import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.resource.NoResourceFoundException;
 
-import com.fasterxml.jackson.databind.exc.InvalidFormatException;
-
-import jakarta.validation.UnexpectedTypeException;
+import java.util.HashMap;
+import java.util.Map;
 
 @RestControllerAdvice
 public class ErrorHandler {
 
+    private static final String MESSAGE = "message";
+
     @ExceptionHandler(value = {
-            NoResourceFoundException.class,
-            HttpRequestMethodNotSupportedException.class
+        NoResourceFoundException.class,
+        HttpRequestMethodNotSupportedException.class
     })
     public ResponseEntity<Object> handleNotFoundExceptions() {
         return ResponseEntity
-                .status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", "Not found"));
+            .status(HttpStatus.NOT_FOUND)
+            .body(Map.of(MESSAGE, "Not found"));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -36,7 +35,7 @@ public class ErrorHandler {
         Map<String, String> response = new HashMap<>();
         ex.getBindingResult().getAllErrors().forEach(error -> {
             String errorMessage = error.getDefaultMessage();
-            response.put("message", errorMessage);
+            response.put(MESSAGE, errorMessage);
         });
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
     }
@@ -45,44 +44,43 @@ public class ErrorHandler {
     public ResponseEntity<Object> handleDataIntegrityViolationException(DataIntegrityViolationException ex) {
         final String errorMessage = ex.getMessage();
         return ResponseEntity
-                .status(HttpStatus.BAD_REQUEST)
-                .body(Map.of("message", errorMessage));
+            .status(HttpStatus.BAD_REQUEST)
+            .body(Map.of(MESSAGE, errorMessage));
     }
 
     @ExceptionHandler(UnexpectedTypeException.class)
     public ResponseEntity<Object> handleUnexpectedTypeException(UnexpectedTypeException ex) {
         final String errorMessage = ex.getMessage();
         return ResponseEntity
-                .status(HttpStatus.BAD_REQUEST)
-                .body(Map.of("message", errorMessage));
+            .status(HttpStatus.BAD_REQUEST)
+            .body(Map.of(MESSAGE, errorMessage));
     }
 
     @ExceptionHandler(value = {
-            IllegalArgumentException.class,
-            IllegalStateException.class
+        IllegalArgumentException.class,
+        IllegalStateException.class
     })
-    public ResponseEntity<Object> handleConflictExceptions(RuntimeException ex, WebRequest request) {
+    public ResponseEntity<Object> handleConflictExceptions(RuntimeException ex) {
         final String errorMessage = ex.getMessage();
 
         return ResponseEntity
-                .status(HttpStatus.CONFLICT)
-                .body(Map.of("message", errorMessage));
+            .status(HttpStatus.CONFLICT)
+            .body(Map.of(MESSAGE, errorMessage));
     }
 
     @ExceptionHandler(HttpMessageNotReadableException.class)
     public ResponseEntity<Object> handleHttpMessageNotReadableException(HttpMessageNotReadableException ex) {
         Throwable cause = ex.getCause();
-        if (cause instanceof InvalidFormatException) {
-            InvalidFormatException ife = (InvalidFormatException) cause;
-            String fieldName = ife.getPath().get(0).getFieldName();
+        if (cause instanceof InvalidFormatException ife) {
+            String fieldName = ife.getPath().getFirst().getFieldName();
             String errorMessage = "Invalid " + fieldName;
             return ResponseEntity
-                    .status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("message", errorMessage));
+                .status(HttpStatus.BAD_REQUEST)
+                .body(Map.of(MESSAGE, errorMessage));
         }
         return ResponseEntity
-                .status(HttpStatus.BAD_REQUEST)
-                .body(Map.of("message", "Invalid request body"));
+            .status(HttpStatus.BAD_REQUEST)
+            .body(Map.of(MESSAGE, "Invalid request body"));
     }
 
 }
